--- a/Jk_Fitness/appsettings.json
+++ b/Jk_Fitness/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnetionString": {
-    "JkFitness": "server=SRI-NB0332; database=JkFitnessDB;Integrated Security=true;"
+    "JkFitness": "server=LAPTOP-AI01D0D7; database=JkFitnessDB_V2;Integrated Security=true;"
   },
   "MailSettings": {
     "Mail": "jkfitnessgroup@gmail.com",
